# ai-workspace

./: .env.dist  .gitignore  AGENTS.md  README.md  docker-compose.yml  gpu-support.yml  teste.txt
.omo/run-continuation/: ses_12da0d890ffenADwS3jKHaA35F.json
.sisyphus/: benchmark-results-fast.md
benchmarks/: AGENTS.md
benchmarks/coding-auto-complete/: artificialanalysis_coding_benchmark.json  artificialanalysis_token_composition.json  benchmark_openrouter_data.md  coding-benchmark-2026-01-05.csv  index.html  openrouter_models.json  openrouter_models.md
benchmarks/rails-inventory-system/: .gitignore  AGENTS.md  BENCHMARK_GUIDE.md  GEMINI.md  Gemfile  Makefile  PROMPT.md  README.md  RESULTS.md  flake.nix  opencode.json
benchmarks/real-estate-normalizer-v2/: PROMPT.md  data.json  (+5 more)
comfyui/: .gitignore  AGENTS.md  Containerfile.comfyui-rocm  comfyui.yaml  download_models.py  flake.nix  models.yaml  requirements_rocm.txt  sample_workflow.json  setup.py  startup.sh
llama-cpp/: .gitignore  AGENTS.md  GEPARD.md  README.md  flake.nix  help.sh  help.txt
llama-cpp/optimizer/: .gitignore  pyproject.toml
llama-cpp/optimizer/corpora/: README.md  coding-smoke.jsonl  long-context-smoke.jsonl  tool-use-smoke.jsonl
llama-cpp/optimizer/profiles/: ornith-1.0-9b.toml
llama-cpp/optimizer/src/llama_optimizer/: __init__.py  artifacts.py  bench.py  bench_command.py  bench_parser.py  bench_runner.py  bench_types.py  cli.py  ledger.py  ledger_dump.py  ledger_evidence.py  ledger_ids.py  ledger_io.py  ledger_materialize.py  ledger_ops.py  ledger_records.py  ledger_resume.py  ledger_schema.py  ledger_store.py  lifecycle.py  models.py  nix_recommendation.py  optuna_adapter.py  profile_errors.py  profile_manifest.py  profile_parser.py  profiles.py  quality.py  quality_gates.py  quality_types.py  report_models.py  report_render.py  reports.py  resume.py  search_space.py  server.py  server_classify.py  server_command.py  server_dispatch.py  server_http.py  (+9 more)
llama-cpp/optimizer/src/llama_optimizer/adapters/: __init__.py  opencode.py  pi.py
llama-cpp/optimizer/tests/: conftest.py  test_artifacts.py  test_bench_parser.py  test_bench_runner.py  test_cli.py  test_finalist_schedule.py  test_ledger.py  test_lifecycle.py  test_nix_contract.py  test_nix_recommendation.py  test_opencode_adapter.py  test_optuna_adapter.py  test_pi_adapter.py  test_profiles.py  test_quality.py  test_reports.py  test_resume_faults.py  test_search_space.py  test_server_runner.py  test_supervisor.py  test_telemetry.py
llama-cpp/optimizer/tests/e2e/: __init__.py  test_fake_run.py  test_scope_contract.py
llama-cpp/optimizer/tests/fixtures/reports/: mixed-report.json  mixed-report.md
(+212 files in other folders)
