[project]
name = "llama-optimizer"
version = "0.1.0"
description = "Deterministic llama.cpp optimizer scaffold: typed CLI and artifact-path contracts."
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [{ name = "llama-cpp optimizer" }]
dependencies = [
  "optuna==4.9.0",
  "typer>=0.12,<1",
]

[project.scripts]
llama-cpp-opt = "llama_optimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "basedpyright>=1.19",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_optimizer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # conflicts with the ruff formatter
  "D104",  # missing-docstring-in-public-package: __init__ is intentionally minimal
  "D203",  # conflicts with D211 (no-blank-line-before-class)
  "D107",  # __init__ is documented via the class docstring
  "ISC003", # conflicts with basedpyright reportImplicitStringConcatenation (prefer explicit +)
  "S301",   # Optuna checkpoints are serialized using pickle

]

[tool.ruff.lint.per-file-ignores]
"tests/test_ledger.py" = [
    "S603",  # cross-process lock-contention test spawns a fully-trusted sys.executable child
]
"tests/test_supervisor.py" = [
    "S603",  # supervisor tests spawn fully-trusted sys.executable children in dedicated process groups
]

"src/llama_optimizer/telemetry.py" = [
  "S603",  # trusted v1 rocm-smi subprocess for the hard channel; binary path is caller-validated
]
"src/llama_optimizer/supervisor.py" = [
  "S603",  # trial children are trusted optimizer-constructed commands, exec'd in a dedicated session
]
"src/llama_optimizer/quality_gates.py" = [
  "S603",  # perplexity subprocess uses a caller-validated binary path
]
"tests/test_quality.py" = [
  "S603",  # fake-binary subprocess tests spawn fully-trusted fixture executables
  "S108",  # test helper default output_dir is an ephemeral path used only during tests
  "ARG002", # some test methods accept tmp_path for consistency even when unused
]
"tests/**/*.py" = [
  "S101",   # asserts are the point of tests
  "D",      # docstrings not required on every test helper
  "PLR2004",# magic values fine in tests
  "SLF001", # private member access fine in tests
]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "all"
